--- a/Idiomatic/src/styles/NavBarApartado.css
+++ b/Idiomatic/src/styles/NavBarApartado.css
@@ -39,6 +39,43 @@
 
 @media screen and (min-width:601px) and (max-width:1023px){
 
+    .ContainerNavBarApartado{
+        background: #F9FAFD;
+        height:10vh;
+        box-shadow:0px 6px 2px GRAY;
+
+    }
+    .ContainerOpcionesNavApartados{
+        display:flex !important;
+        justify-content:right;
+        position:relative;
+        bottom:50px;
+    }
+    
+    .opcionMenu{
+        bottom: 5px ;
+        color:black !important;
+    }
+    
+    
+    .opcionMenu:focus{
+        background-color: aqua !important;   
+    }
+    .btnAbrirApartado{
+        position: none !important;
+        
+    }
+    .NavBarOpcionesApartadoOcultar {
+        /* background: gray; */
+        display:flex !important;
+        /* flex-direction: column; */
+        justify-content:right;
+        position:relative !important;
+
+        bottom:50px;
+        padding-right: 0 !important;
+    }
+
 }
 
 
@@ -78,6 +115,7 @@
         position:relative !important;
 
         bottom:50px;
+
     }
 
 }
