--- a/Idiomatic/src/styles/NotificacionesHome.css
+++ b/Idiomatic/src/styles/NotificacionesHome.css
@@ -37,7 +37,8 @@
     .ContenedorNoti{
         background: rgba(255, 199, 39, 0.7);
         position: relative !important;
-        margin-top: 10%;
+        /* margin-top: 10%; */
+        /* margin-bottom: 4%; */
     }
     .btnBorrarNoti{
         background:red;
@@ -59,8 +60,8 @@
     .imgContPage{
         position:absolute;
         right:20px;
-        width: 35%;
-        top:14%;
+        width: 19%;
+        top:13%;
         /* min-height:25%; */
     }
 
@@ -69,6 +70,67 @@
 
 @media screen and (min-width:601px) and (max-width:1023px){
 
+    .ContenedorMain{
+
+        margin-top: 5% !important;
+        background:rgba(119, 102, 198, 0.3);
+        width:100%;
+        height: 20vh;
+        border-Radius:50px;
+        margin-bottom: 6%;
+    }
+
+    .TituloNoti{
+        color:black;
+        left:20%;
+        font-Size:4vw;
+    }
+
+    .SubTNoti{
+        color:black;
+        text-Align:center;
+        font-Size:3vw;
+    }
+
+    .btonFiltrar{
+        margin-top: 3% !important;
+        margin-bottom: 3% !important;
+        color: black !important;
+        border-radius: 45px !important;
+        width:  25%;
+        background:greenyellow !important;
+    }
+
+    .ContenedorNoti{
+        background: rgba(255, 199, 39, 0.7);
+        position: relative !important;
+    }
+
+    .btnBorrarNoti{
+        background:red;
+        position:absolute;
+        right:0;
+        top:0;
+        width:8%;
+        height:5vh;
+        cursor:pointer;
+    }
+    .btnUser_NotificacionPage{
+        background:red;
+        position:absolute;
+        right:0;
+        top:0;
+        width:7%;
+        height:5vh;
+    }
+
+    .imgContPage{
+        position:absolute;
+        right:20px;
+        width: 15%;
+        top:4%;
+        /* min-height:25%; */
+    }
 
 }
 
