--- a/Idiomatic/src/styles/StylesApartados/PageVideo.css
+++ b/Idiomatic/src/styles/StylesApartados/PageVideo.css
@@ -10,9 +10,10 @@
 
     .imgIconoPageVideo{
         margin-top: 4vh;
-        width: 25%;
+        /* width: 25%; */
         float:left;
         margin-left:2%;
+        max-width: 18%;
     }
     .TitleNavPageVideo{
         margin-top:0;
@@ -26,12 +27,41 @@
         width: 80% !important;
         /* height: 100vh; */
         margin-left:11%;
-        margin-top:40%;
+        margin-top:28%;
     }
     
 }
 
 @media screen and (min-width:601px) and (max-width:1023px){
+
+    .NavPageVideo{
+        width:100%;
+        height:20vh;
+        background:rgba(119, 102, 198, 0.4);
+        margin:0;
+        max-width:1440px !important;
+    }
+
+    .imgIconoPageVideo{
+        float:left;
+        margin-left:2%;
+        /* width: 18vw; */
+        max-width: 20%;
+        height: 20vh;
+    }
+    .TitleNavPageVideo{
+        margin-top:0;
+        text-align:center;
+        position:relative;
+        right:8%;
+        top:18%;
+    }
+    .ReactPlayerX{
+        width: 60% !important;
+        /* height: 100vh; */
+        margin-left:23%;
+        margin-top:2%;
+    }
 
 }
 
@@ -49,6 +79,7 @@
     .imgIconoPageVideo{
         float:left;
         margin-left:2%;
+        max-width: 14%;
     }
     .TitleNavPageVideo{
         margin-top:0;
